refactor : getKokContractInfo 메서드 쿼리 최적화
1. outer와 같은 방식
2. kok 에서 checkedOption과 checkedDetailOption을 fetch join